# workspace

./: .gitignore  README.md  docker-compose.yml
.NET/Events/: Events.sln
.NET/Events/Events/: MailService.cs  MessageService.cs  Program.cs  Video.cs  VideoEncoder.cs
Blog/: .gitignore  Procfile  README.md  pom.xml
ClientServer/: build.gradle  settings.gradle
ClientServer/client/: build.gradle
ClientServer/server/: build.gradle
Jetty_Soap_Rest/: build.gradle
McqPilot/: pom.xml
SpringMVC/: pom.xml
cpp/: Atomic.cpp  Bind.cpp  CMakeLists.txt  CRTP.cpp  Client.cpp  Server.cpp
cpp/bit_manipulation/: BitManipulation.cpp
cpp/comms/: blocking_reader.h  serial.cpp
cpp/smart_pointers/: SmartPointer.cpp  UniquePointer.cpp
docker/: README.txt
java/ParkingSystem/: pom.xml
java/StopStop/: pom.xml
mksnt/: appc.ksh  autorun.ksh  gdf.ksh  gps.ksh  run_eclipse.bat  sh_histo  tksched.hlp  ugrep.ksh  vdiff.hlp  viw.hlp  vpax.hlp
node-app/back-end/: .env.dev  .env.test  app.js  package.json  roles.js
node-app/back-end/config/: database.js
node-app/back-end/controllers/: postController.js  userController.js
node-app/back-end/models/: Post.js  PostMessage.js  Role.js  User.js  sequelize.js
node-app/back-end/routes/: routes.js
node-app/back-end/test/: test.js
node-app/back-end/utils/: pagination.js
node-app/cognito/: .env  app.js  package.json  routes.js  server.js
node-app/cognito/controllers/: AuthController.js  HelloController.js
node-app/cognito/middleware/: AuthMiddleware.js
node-app/cognito/services/: AuthService.js
node-app/front-end/: .env  package.json
node-app/front-end/public/: index.html
node-app/front-end/src/: App.vue  event-bus.js  main.js  mcp_api_client.js  router.js  store.js  vuetify-overrides.scss
python/script/: beautify-stack-trace.py  get-branch-name.py  get_changed_files_between_versions.py  get_changed_files_in_mr.py  oci_os_get.py  secrets-manager.py
python/sudoko/: main.py
python/udp/: udp_client.py  udp_server.py
soap-webservice-axis-maven/: pom.xml
soap-webservice-axis-maven/client/: pom.xml
soap-webservice-axis-maven/server/: README.md  key.crt  keystore.jks  pom.xml  truststore.jks
terraform/lightsail/: inputs.tf  main.tf  provider.tf  terraform.tfvars
terraform/limbs/: main.tf  terraform.tfvars
terraform/limbs-admin/: main.tf  terraform.tfvars
terraform/nginx/: main.tf
terraform/root/: README.md  main.tf  terraform.tfvars  variables.tf
terraform/root/limbs/: main.tf  variables.tf
terraform/root/limbs-admin/: main.tf  variables.tf
terraform/root/limbs-php/: main.tf  variables.tf
terraform/root/limbs-ruby/: main.tf  variables.tf
terraform/test/: main.tf
vcpkg/: CMakeLists.txt  README.txt  example.cpp
(+212 files in other folders)
